@@ -20,15 +20,18 @@ import io.airlift.units.DataSize;
 import io.trino.RowPagesBuilder;
 import io.trino.Session;
 import io.trino.operator.DriverContext;
+import io.trino.operator.NullSafeHashCompiler;
 import io.trino.operator.Operator;
 import io.trino.operator.OperatorFactory;
 import io.trino.operator.PagesIndex;
 import io.trino.operator.PartitionFunction;
 import io.trino.operator.TaskContext;
 import io.trino.operator.exchange.LocalPartitionGenerator;
-import io.trino.operator.join.HashBuilderOperator.HashBuilderOperatorFactory;
+import io.trino.operator.join.spilling.HashBuilderOperator.HashBuilderOperatorFactory;
+import io.trino.operator.join.spilling.PartitionedLookupSourceFactory;
 import io.trino.spi.Page;
 import io.trino.spi.PageBuilder;
+import io.trino.spi.block.Block;
 import io.trino.spi.type.Type;
 import io.trino.spi.type.TypeOperators;
 import io.trino.spiller.SingleStreamSpillerFactory;
@@ -94,7 +97,7 @@ public class BenchmarkHashBuildAndJoinOperators
     private static final int HASH_BUILD_OPERATOR_ID = 1;
     private static final int HASH_JOIN_OPERATOR_ID = 2;
     private static final PlanNodeId TEST_PLAN_NODE_ID = new PlanNodeId("test");
-    private static final TypeOperators TYPE_OPERATORS = new TypeOperators();
+    private static final NullSafeHashCompiler HASH_COMPILER = new NullSafeHashCompiler(new TypeOperators());
 
     @State(Scope.Benchmark)
     public static class BuildContext
@@ -103,9 +106,6 @@ public class BenchmarkHashBuildAndJoinOperators
 
         @Param({"varchar", "bigint", "all"})
         protected String hashColumns = "bigint";
-
-        @Param({"false", "true"})
-        protected boolean buildHashEnabled;
 
         @Param({"1", "5"})
         protected int buildRowsRepetition = 1;
@@ -116,7 +116,6 @@ public class BenchmarkHashBuildAndJoinOperators
         protected ExecutorService executor;
         protected ScheduledExecutorService scheduledExecutor;
         protected List<Page> buildPages;
-        protected OptionalInt hashChannel;
         protected List<Type> types;
         protected List<Integer> hashChannels;
 
@@ -124,17 +123,10 @@ public class BenchmarkHashBuildAndJoinOperators
         public void setup()
         {
             switch (hashColumns) {
-                case "varchar":
-                    hashChannels = Ints.asList(0);
-                    break;
-                case "bigint":
-                    hashChannels = Ints.asList(1);
-                    break;
-                case "all":
-                    hashChannels = Ints.asList(0, 1, 2);
-                    break;
-                default:
-                    throw new UnsupportedOperationException(format("Unknown hashColumns value [%s]", hashColumns));
+                case "varchar" -> hashChannels = Ints.asList(0);
+                case "bigint" -> hashChannels = Ints.asList(1);
+                case "all" -> hashChannels = Ints.asList(0, 1, 2);
+                default -> throw new UnsupportedOperationException(format("Unknown hashColumns value [%s]", hashColumns));
             }
             executor = newCachedThreadPool(daemonThreadsNamed(getClass().getSimpleName() + "-%s"));
             scheduledExecutor = newScheduledThreadPool(2, daemonThreadsNamed(getClass().getSimpleName() + "-scheduledExecutor-%s"));
@@ -150,11 +142,6 @@ public class BenchmarkHashBuildAndJoinOperators
         public TaskContext createTaskContext()
         {
             return TestingTaskContext.createTaskContext(executor, scheduledExecutor, getSession(), DataSize.of(2, GIGABYTE));
-        }
-
-        public OptionalInt getHashChannel()
-        {
-            return hashChannel;
         }
 
         public List<Integer> getHashChannels()
@@ -174,7 +161,7 @@ public class BenchmarkHashBuildAndJoinOperators
 
         protected void initializeBuildPages()
         {
-            RowPagesBuilder buildPagesBuilder = rowPagesBuilder(buildHashEnabled, hashChannels, ImmutableList.of(VARCHAR, BIGINT, BIGINT));
+            RowPagesBuilder buildPagesBuilder = rowPagesBuilder(ImmutableList.of(VARCHAR, BIGINT, BIGINT));
 
             int maxValue = buildRowsNumber / buildRowsRepetition + 40;
             int rows = 0;
@@ -187,8 +174,6 @@ public class BenchmarkHashBuildAndJoinOperators
 
             types = buildPagesBuilder.getTypes();
             buildPages = buildPagesBuilder.build();
-            hashChannel = buildPagesBuilder.getHashChannel()
-                    .map(OptionalInt::of).orElse(OptionalInt.empty());
         }
     }
 
@@ -219,17 +204,10 @@ public class BenchmarkHashBuildAndJoinOperators
             super.setup();
 
             switch (outputColumns) {
-                case "varchar":
-                    outputChannels = Ints.asList(0);
-                    break;
-                case "bigint":
-                    outputChannels = Ints.asList(1);
-                    break;
-                case "all":
-                    outputChannels = Ints.asList(0, 1, 2);
-                    break;
-                default:
-                    throw new UnsupportedOperationException(format("Unknown outputColumns value [%s]", hashColumns));
+                case "varchar" -> outputChannels = Ints.asList(0);
+                case "bigint" -> outputChannels = Ints.asList(1);
+                case "all" -> outputChannels = Ints.asList(0, 1, 2);
+                default -> throw new UnsupportedOperationException(format("Unknown outputColumns value [%s]", hashColumns));
             }
 
             JoinBridgeManager<PartitionedLookupSourceFactory> lookupSourceFactory = getLookupSourceFactoryManager(this, outputChannels, partitionCount);
@@ -240,11 +218,10 @@ public class BenchmarkHashBuildAndJoinOperators
                     lookupSourceFactory,
                     types,
                     hashChannels,
-                    hashChannel,
                     Optional.of(outputChannels),
                     OptionalInt.empty(),
                     unsupportedPartitioningSpillerFactory(),
-                    TYPE_OPERATORS);
+                    HASH_COMPILER);
             buildHash(this, lookupSourceFactory, outputChannels, partitionCount);
             initializeProbePages();
         }
@@ -261,7 +238,7 @@ public class BenchmarkHashBuildAndJoinOperators
 
         protected void initializeProbePages()
         {
-            RowPagesBuilder probePagesBuilder = rowPagesBuilder(buildHashEnabled, hashChannels, ImmutableList.of(VARCHAR, BIGINT, BIGINT));
+            RowPagesBuilder probePagesBuilder = rowPagesBuilder(ImmutableList.of(VARCHAR, BIGINT, BIGINT));
 
             Random random = new Random(42);
             int remainingRows = PROBE_ROWS_NUMBER;
@@ -328,7 +305,7 @@ public class BenchmarkHashBuildAndJoinOperators
                         .collect(toImmutableList()),
                 partitionCount,
                 false,
-                TYPE_OPERATORS));
+                HASH_COMPILER));
     }
 
     private static void buildHash(BuildContext buildContext, JoinBridgeManager<PartitionedLookupSourceFactory> lookupSourceFactoryManager, List<Integer> outputChannels, int partitionCount)
@@ -339,9 +316,8 @@ public class BenchmarkHashBuildAndJoinOperators
                 lookupSourceFactoryManager,
                 outputChannels,
                 buildContext.getHashChannels(),
-                buildContext.getHashChannel(),
                 Optional.empty(),
-                Optional.empty(),
+                OptionalInt.empty(),
                 ImmutableList.of(),
                 10_000,
                 new PagesIndex.TestingFactory(false),
@@ -368,7 +344,7 @@ public class BenchmarkHashBuildAndJoinOperators
                                     .map(channel -> buildContext.getTypes().get(channel))
                                     .collect(toImmutableList()),
                             Ints.toArray(buildContext.getHashChannels()),
-                            TYPE_OPERATORS),
+                            HASH_COMPILER),
                     partitionCount);
 
             for (Page page : buildContext.getBuildPages()) {
@@ -414,8 +390,8 @@ public class BenchmarkHashBuildAndJoinOperators
         pageBuilder.declarePosition();
 
         for (int channel = 0; channel < types.size(); channel++) {
-            Type type = types.get(channel);
-            type.appendTo(page.getBlock(channel), position, pageBuilder.getBlockBuilder(channel));
+            Block block = page.getBlock(channel);
+            pageBuilder.getBlockBuilder(channel).append(block.getUnderlyingValueBlock(), block.getUnderlyingValuePosition(position));
         }
     }
 
@@ -465,7 +441,7 @@ public class BenchmarkHashBuildAndJoinOperators
 
         // assert that there are any rows
         checkState(!pages.isEmpty());
-        checkState(pages.get(0).getPositionCount() > 0);
+        checkState(pages.getFirst().getPositionCount() > 0);
     }
 
     @Test
@@ -476,7 +452,7 @@ public class BenchmarkHashBuildAndJoinOperators
         benchmarkBuildHash(buildContext);
     }
 
-    public static void main(String[] args)
+    static void main()
             throws RunnerException
     {
         benchmark(BenchmarkHashBuildAndJoinOperators.class).run();
