@@ -14,7 +14,7 @@
 package io.trino.server.security;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.json.JsonMapper;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
@@ -22,6 +22,7 @@ import com.google.common.io.Resources;
 import com.google.inject.Inject;
 import com.google.inject.Key;
 import com.google.inject.Module;
+import io.airlift.http.server.HttpConfig;
 import io.airlift.http.server.HttpServerConfig;
 import io.airlift.http.server.HttpServerInfo;
 import io.airlift.http.server.testing.TestingHttpServer;
@@ -72,7 +73,6 @@ import java.net.HttpCookie;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.Principal;
 import java.security.PrivateKey;
 import java.security.PublicKey;
@@ -83,13 +83,10 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.UUID;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-import static com.google.common.base.MoreObjects.firstNonNull;
 import static com.google.common.hash.Hashing.sha256;
 import static com.google.common.net.HttpHeaders.AUTHORIZATION;
 import static com.google.inject.multibindings.OptionalBinder.newOptionalBinder;
@@ -99,7 +96,7 @@ import static io.jsonwebtoken.Claims.AUDIENCE;
 import static io.jsonwebtoken.security.Keys.hmacShaKeyFor;
 import static io.trino.client.OkHttpUtil.setupSsl;
 import static io.trino.client.ProtocolHeaders.TRINO_HEADERS;
-import static io.trino.metadata.MetadataManager.createTestMetadataManager;
+import static io.trino.metadata.TestingMetadataManager.createTestingMetadataManager;
 import static io.trino.server.security.ResourceSecurity.AccessType.AUTHENTICATED_USER;
 import static io.trino.server.security.ResourceSecurity.AccessType.WEB_UI;
 import static io.trino.server.security.jwt.JwtUtil.newJwtBuilder;
@@ -121,6 +118,7 @@ import static java.lang.String.format;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.time.Instant.now;
 import static java.util.Objects.requireNonNull;
+import static java.util.Objects.requireNonNullElse;
 import static java.util.concurrent.TimeUnit.MINUTES;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.TestInstance.Lifecycle.PER_CLASS;
@@ -132,7 +130,7 @@ public class TestResourceSecurity
 {
     private static final String LOCALHOST_KEYSTORE = Resources.getResource("cert/localhost.pem").getPath();
     private static final String ALLOWED_USER_MAPPING_PATTERN = "(.*)@allowed";
-    private static final ImmutableMap<String, String> SECURE_PROPERTIES = ImmutableMap.<String, String>builder()
+    private static final Map<String, String> SECURE_PROPERTIES = ImmutableMap.<String, String>builder()
             .put("http-server.https.enabled", "true")
             .put("http-server.https.keystore.path", LOCALHOST_KEYSTORE)
             .put("http-server.https.keystore.key", "")
@@ -148,13 +146,12 @@ public class TestResourceSecurity
     private static final String MANAGEMENT_PASSWORD = "management-password";
     private static final String HMAC_KEY = Resources.getResource("hmac_key.txt").getPath();
     private static final String JWK_KEY_ID = "test-rsa";
-    private static final String GROUPS_CLAIM = "groups";
     private static final String TRINO_AUDIENCE = "trino-client";
     private static final String ADDITIONAL_AUDIENCE = "https://external-service.com";
     private static final String UNTRUSTED_CLIENT_AUDIENCE = "https://untrusted.com";
     private static final PrivateKey JWK_PRIVATE_KEY;
     private static final PublicKey JWK_PUBLIC_KEY;
-    private static final ObjectMapper json = new ObjectMapper();
+    private static final JsonMapper json = new JsonMapper();
 
     static {
         try {
@@ -488,7 +485,7 @@ public class TestResourceSecurity
 
             assertAuthenticationDisabled(httpServerInfo.getHttpUri());
 
-            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Paths.get(HMAC_KEY)).trim()));
+            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Path.of(HMAC_KEY)).trim()));
             JwtBuilder tokenBuilder = newJwtBuilder()
                     .signWith(hmac)
                     .expiration(Date.from(ZonedDateTime.now().plusMinutes(5).toInstant()));
@@ -508,7 +505,7 @@ public class TestResourceSecurity
             String token = tokenBuilder.compact();
 
             OkHttpClient clientWithJwt = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + token)
                             .build())
                     .build();
@@ -542,7 +539,7 @@ public class TestResourceSecurity
                     .compact();
 
             OkHttpClient clientWithJwt = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + token)
                             .build())
                     .build();
@@ -568,7 +565,7 @@ public class TestResourceSecurity
                 .build()) {
             HttpServerInfo httpServerInfo = server.getInstance(Key.get(HttpServerInfo.class));
 
-            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Paths.get(HMAC_KEY)).trim()));
+            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Path.of(HMAC_KEY)).trim()));
             JwtBuilder tokenBuilder = newJwtBuilder()
                     .signWith(hmac)
                     .expiration(Date.from(ZonedDateTime.now().plusMinutes(5).toInstant()))
@@ -604,7 +601,7 @@ public class TestResourceSecurity
 
             assertAuthenticationDisabled(httpServerInfo.getHttpUri());
 
-            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Paths.get(HMAC_KEY)).trim()));
+            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Path.of(HMAC_KEY)).trim()));
             JwtBuilder tokenBuilder = newJwtBuilder()
                     .signWith(hmac)
                     .expiration(Date.from(ZonedDateTime.now().plusMinutes(5).toInstant()))
@@ -617,7 +614,7 @@ public class TestResourceSecurity
             String token = tokenBuilder.compact();
 
             OkHttpClient clientWithJwt = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + token)
                             .build())
                     .build();
@@ -674,16 +671,16 @@ public class TestResourceSecurity
                     uriBuilderFrom(baseUri)
                             .replacePath("/oauth2/callback/")
                             .addParameter("code", "TEST_CODE")
-                            .addParameter("state", bearer.getState())
+                            .addParameter("state", bearer.state())
                             .toString());
             if (refreshTokensEnabled) {
                 TokenPairSerializer serializer = server.getInstance(Key.get(TokenPairSerializer.class));
-                TokenPair tokenPair = serializer.deserialize(getOauthToken(client, bearer.getTokenServer()));
+                TokenPair tokenPair = serializer.deserialize(getOauthToken(client, bearer.tokenServer()));
                 assertThat(tokenPair.accessToken()).isEqualTo(tokenServer.getAccessToken());
                 assertThat(tokenPair.refreshToken()).isEqualTo(Optional.of(tokenServer.getRefreshToken()));
             }
             else {
-                assertThat(getOauthToken(client, bearer.getTokenServer())).isEqualTo(tokenServer.getAccessToken());
+                assertThat(getOauthToken(client, bearer.tokenServer())).isEqualTo(tokenServer.getAccessToken());
             }
 
             // if Web UI is using oauth so we should get a cookie
@@ -696,7 +693,7 @@ public class TestResourceSecurity
                 assertThat(cookie.isHttpOnly()).isTrue();
 
                 HttpCookie idTokenCookie = getCookie(cookieManager, ID_TOKEN_COOKIE);
-                assertThat(idTokenCookie.getValue()).isEqualTo(tokenServer.issueIdToken(Optional.of(hashNonce(bearer.getNonceCookie().getValue()))));
+                assertThat(idTokenCookie.getValue()).isEqualTo(tokenServer.issueIdToken(Optional.of(hashNonce(bearer.nonceCookie().getValue()))));
                 assertThat(idTokenCookie.getPath()).isEqualTo("/ui/");
                 assertThat(idTokenCookie.getDomain()).isEqualTo(baseUri.getHost());
                 assertThat(idTokenCookie.getMaxAge() > 0 && cookie.getMaxAge() < MINUTES.toSeconds(5)).isTrue();
@@ -712,8 +709,8 @@ public class TestResourceSecurity
             }
 
             OkHttpClient clientWithOAuthToken = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
-                            .header(AUTHORIZATION, "Bearer " + getOauthToken(client, bearer.getTokenServer()))
+                    .authenticator((_, response) -> response.request().newBuilder()
+                            .header(AUTHORIZATION, "Bearer " + getOauthToken(client, bearer.tokenServer()))
                             .build())
                     .build();
             assertAuthenticationAutomatic(httpServerInfo.getHttpsUri(), clientWithOAuthToken);
@@ -733,7 +730,7 @@ public class TestResourceSecurity
                 .url(uriBuilderFrom(baseUri)
                         .replacePath("/oauth2/callback/")
                         .addParameter("error", maliciousErrorCode)
-                        .addParameter("state", bearer.getState())
+                        .addParameter("state", bearer.state())
                         .toString())
                 .build();
         try (Response response = client.newCall(request).execute()) {
@@ -785,45 +782,18 @@ public class TestResourceSecurity
         }
     }
 
-    private static class OAuthBearer
+    private record OAuthBearer(String state, String tokenServer, HttpCookie nonceCookie)
     {
-        private final String state;
-        private final String tokenServer;
-        private final HttpCookie nonceCookie;
-
-        public OAuthBearer(String state, String tokenServer, HttpCookie nonceCookie)
+        private OAuthBearer
         {
-            this.state = requireNonNull(state, "state is null");
-            this.tokenServer = requireNonNull(tokenServer, "tokenServer is null");
-            this.nonceCookie = requireNonNull(nonceCookie, "nonce is null");
-        }
-
-        public String getState()
-        {
-            return state;
-        }
-
-        public String getTokenServer()
-        {
-            return tokenServer;
-        }
-
-        public HttpCookie getNonceCookie()
-        {
-            return nonceCookie;
+            requireNonNull(state, "state is null");
+            requireNonNull(tokenServer, "tokenServer is null");
+            requireNonNull(nonceCookie, "nonce is null");
         }
     }
 
     @Test
     public void testOAuth2Groups()
-            throws Exception
-    {
-        testOAuth2Groups(Optional.empty());
-        testOAuth2Groups(Optional.of(ImmutableSet.of()));
-        testOAuth2Groups(Optional.of(ImmutableSet.of("admin", "public")));
-    }
-
-    private void testOAuth2Groups(Optional<Set<String>> groups)
             throws Exception
     {
         try (TokenServer tokenServer = new TokenServer(Optional.empty());
@@ -833,16 +803,15 @@ public class TestResourceSecurity
                                 .put("web-ui.enabled", "true")
                                 .put("http-server.authentication.type", "oauth2")
                                 .putAll(getOAuth2Properties(tokenServer))
-                                .put("deprecated.http-server.authentication.oauth2.groups-field", GROUPS_CLAIM)
                                 .buildOrThrow())
                         .setAdditionalModule(oauth2Module(tokenServer))
                         .setSystemAccessControl(TestSystemAccessControl.NO_IMPERSONATION)
                         .build()) {
             HttpServerInfo httpServerInfo = server.getInstance(Key.get(HttpServerInfo.class));
 
-            String accessToken = tokenServer.issueAccessToken(groups);
+            String accessToken = tokenServer.issueAccessToken();
             OkHttpClient clientWithOAuthToken = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + accessToken)
                             .build())
                     .build();
@@ -856,16 +825,13 @@ public class TestResourceSecurity
                 assertThat(response.code()).isEqualTo(SC_OK);
                 assertThat(response.header("user")).isEqualTo(TEST_USER);
                 assertThat(response.header("principal")).isEqualTo(TEST_USER);
-                assertThat(response.header("groups")).isEqualTo(groups.map(TestResource::toHeader).orElse(""));
             }
 
             OkHttpClient clientWithOAuthCookie = client.newBuilder()
                     .cookieJar(new CookieJar()
                     {
                         @Override
-                        public void saveFromResponse(HttpUrl url, List<Cookie> cookies)
-                        {
-                        }
+                        public void saveFromResponse(HttpUrl url, List<Cookie> cookies) {}
 
                         @Override
                         public List<Cookie> loadForRequest(HttpUrl url)
@@ -888,7 +854,6 @@ public class TestResourceSecurity
                 assertThat(response.code()).isEqualTo(SC_OK);
                 assertThat(response.header("user")).isEqualTo(TEST_USER);
                 assertThat(response.header("principal")).isEqualTo(TEST_USER);
-                assertThat(response.header("groups")).isEqualTo(groups.map(TestResource::toHeader).orElse(""));
             }
         }
     }
@@ -926,7 +891,7 @@ public class TestResourceSecurity
             assertAuthenticationDisabled(httpServerInfo.getHttpUri());
 
             OkHttpClient clientWithOAuthToken = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + tokenServer.getAccessToken())
                             .build())
                     .build();
@@ -941,7 +906,7 @@ public class TestResourceSecurity
                     .compact();
 
             OkHttpClient clientWithJwt = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + token)
                             .build())
                     .build();
@@ -983,7 +948,7 @@ public class TestResourceSecurity
                     .compact();
 
             OkHttpClient clientWithJwt = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + token)
                             .build())
                     .build();
@@ -1077,7 +1042,7 @@ public class TestResourceSecurity
             this.principalField = requireNonNull(principalField, "principalField is null");
             jwkServer = createTestingJwkServer();
             jwkServer.start();
-            accessToken = issueAccessToken(Optional.empty());
+            accessToken = issueAccessToken();
         }
 
         @Override
@@ -1092,9 +1057,7 @@ public class TestResourceSecurity
             return new OAuth2Client()
             {
                 @Override
-                public void load()
-                {
-                }
+                public void load() {}
 
                 @Override
                 public Request createAuthorizationRequest(String state, URI callbackUri)
@@ -1112,7 +1075,7 @@ public class TestResourceSecurity
                 }
 
                 @Override
-                public Optional<Map<String, Object>> getClaims(String accessToken)
+                public Optional<Map<String, Object>> getAccessTokenClaims(String accessToken)
                 {
                     return Optional.of(jwtParser.parseSignedClaims(accessToken).getPayload());
                 }
@@ -1162,7 +1125,7 @@ public class TestResourceSecurity
             return REFRESH_TOKEN;
         }
 
-        public String issueAccessToken(Optional<Set<String>> groups)
+        public String issueAccessToken()
         {
             JwtBuilder accessToken = newJwtBuilder()
                     .signWith(JWK_PRIVATE_KEY)
@@ -1176,7 +1139,6 @@ public class TestResourceSecurity
             else {
                 accessToken.subject(TEST_USER);
             }
-            groups.ifPresent(groupsClaim -> accessToken.claim(GROUPS_CLAIM, groupsClaim));
             return accessToken.compact();
         }
 
@@ -1209,8 +1171,8 @@ public class TestResourceSecurity
         {
             this.sessionContextFactory = new HttpRequestSessionContextFactory(
                     new PreparedStatementEncoder(new ProtocolConfig()),
-                    createTestMetadataManager(),
-                    user -> ImmutableSet.of(),
+                    createTestingMetadataManager(),
+                    _ -> ImmutableSet.of(),
                     accessControl,
                     new ProtocolConfig(),
                     QueryDataEncoder.EncoderSelector.noEncoder());
@@ -1238,13 +1200,7 @@ public class TestResourceSecurity
             return jakarta.ws.rs.core.Response.ok()
                     .header("user", identity.getUser())
                     .header("principal", identity.getPrincipal().map(Principal::getName).orElse(null))
-                    .header("groups", toHeader(identity.getGroups()))
                     .build();
-        }
-
-        public static String toHeader(Set<String> groups)
-        {
-            return groups.stream().sorted().collect(Collectors.joining(","));
         }
     }
 
@@ -1371,17 +1327,19 @@ public class TestResourceSecurity
         assertResponseCode(client, url, expectedCode, null, null);
     }
 
-    private static void assertResponseCode(OkHttpClient client,
+    private static void assertResponseCode(
+            OkHttpClient client,
             String url,
             int expectedCode,
             String userName,
             String password)
             throws IOException
     {
-        assertResponseCode(client, url, expectedCode, Headers.of("Authorization", Credentials.basic(firstNonNull(userName, ""), firstNonNull(password, ""))));
+        assertResponseCode(client, url, expectedCode, Headers.of("Authorization", Credentials.basic(requireNonNullElse(userName, ""), requireNonNullElse(password, ""))));
     }
 
-    private static void assertResponseCode(OkHttpClient client,
+    private static void assertResponseCode(
+            OkHttpClient client,
             String url,
             int expectedCode,
             Headers headers)
@@ -1405,7 +1363,7 @@ public class TestResourceSecurity
 
     private static String getManagementLocation(URI baseUri)
     {
-        return getLocation(baseUri, "/v1/node");
+        return getLocation(baseUri, "/v1/thread");
     }
 
     private static String getAuthorizedUserLocation(URI baseUri)
@@ -1488,10 +1446,10 @@ public class TestResourceSecurity
             throws IOException
     {
         NodeInfo nodeInfo = new NodeInfo("test");
-        HttpServerConfig config = new HttpServerConfig().setHttpPort(0);
-        HttpServerInfo httpServerInfo = new HttpServerInfo(config, nodeInfo);
+        HttpServerConfig config = new HttpServerConfig();
+        HttpServerInfo httpServerInfo = new HttpServerInfo(config, Optional.of(new HttpConfig().setHttpPort(0)), Optional.empty(), nodeInfo);
 
-        return new TestingHttpServer(httpServerInfo, nodeInfo, config, new JwkServlet());
+        return new TestingHttpServer("testing-jwks-server", httpServerInfo, nodeInfo, config, new JwkServlet());
     }
 
     private static class JwkServlet
