@@ -13,32 +13,28 @@
  */
 package io.trino.plugin.oracle;
 
-import com.google.common.base.Joiner;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.io.Files;
 import dev.failsafe.Failsafe;
 import dev.failsafe.RetryPolicy;
 import io.airlift.log.Logger;
 import io.trino.plugin.jdbc.ConnectionFactory;
 import io.trino.plugin.jdbc.DriverConnectionFactory;
 import io.trino.plugin.jdbc.RetryingConnectionFactory;
-import io.trino.plugin.jdbc.RetryingConnectionFactory.DefaultRetryStrategy;
 import io.trino.plugin.jdbc.credential.StaticCredentialProvider;
 import io.trino.plugin.jdbc.jmx.StatisticsAwareConnectionFactory;
-import io.trino.testing.ResourcePresence;
 import oracle.jdbc.OracleDriver;
-import org.testcontainers.containers.OracleContainer;
+import org.testcontainers.containers.wait.strategy.Wait;
+import org.testcontainers.oracle.OracleContainer;
 import org.testcontainers.utility.MountableFile;
 
 import java.io.Closeable;
-import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
+import java.time.Duration;
 import java.time.temporal.ChronoUnit;
 
 import static io.trino.testing.TestingConnectorSession.SESSION;
@@ -76,11 +72,14 @@ public class TestingOracleServer
 
     private void createContainer()
     {
-        OracleContainer container = new OracleContainer("gvenzl/oracle-xe:11.2.0.2-full")
+        OracleContainer container = new OracleContainer("gvenzl/oracle-free:23.9-slim")
                 .withCopyFileToContainer(MountableFile.forClasspathResource("init.sql"), "/container-entrypoint-initdb.d/01-init.sql")
                 .withCopyFileToContainer(MountableFile.forClasspathResource("restart.sh"), "/container-entrypoint-initdb.d/02-restart.sh")
-                .withCopyFileToContainer(MountableFile.forHostPath(createConfigureScript()), "/container-entrypoint-initdb.d/03-create-users.sql")
-                .usingSid();
+                // mode must be set explicitly: the temporary file is created with owner-only permissions,
+                // and the container entrypoint runs the init scripts as the unprivileged "oracle" user
+                .withCopyFileToContainer(MountableFile.forHostPath(createConfigureScript(), 0644), "/container-entrypoint-initdb.d/03-create-users.sql")
+                .waitingFor(Wait.forLogMessage(".*DATABASE IS READY TO USE!.*\\s", 1).withStartupTimeout(Duration.ofMinutes(2)))
+                .withStartupTimeoutSeconds(180);
         try {
             this.cleanup = startOrReuse(container);
             this.container = container;
@@ -95,16 +94,18 @@ public class TestingOracleServer
     private Path createConfigureScript()
     {
         try {
-            File tempFile = File.createTempFile("init-", ".sql");
+            Path tempFile = Files.createTempFile("init-", ".sql");
 
-            Files.write(Joiner.on("\n").join(
+            Files.writeString(tempFile, String.join(
+                    "\n",
+                    format("ALTER SESSION SET CONTAINER=FREEPDB1;"),
                     format("CREATE TABLESPACE %s DATAFILE 'test_db.dat' SIZE 100M ONLINE;", TEST_TABLESPACE),
                     format("CREATE USER %s IDENTIFIED BY %s DEFAULT TABLESPACE %s;", TEST_USER, TEST_PASS, TEST_TABLESPACE),
                     format("GRANT UNLIMITED TABLESPACE TO %s;", TEST_USER),
                     format("GRANT CREATE SESSION TO %s;", TEST_USER),
-                    format("GRANT ALL PRIVILEGES TO %s;", TEST_USER)).getBytes(StandardCharsets.UTF_8), tempFile);
+                    format("GRANT ALL PRIVILEGES TO %s;", TEST_USER)));
 
-            return tempFile.toPath();
+            return tempFile;
         }
         catch (IOException e) {
             throw new UncheckedIOException(e);
@@ -136,7 +137,7 @@ public class TestingOracleServer
     {
         StatisticsAwareConnectionFactory connectionFactory = new StatisticsAwareConnectionFactory(
                 DriverConnectionFactory.builder(new OracleDriver(), connectionUrl, StaticCredentialProvider.of(username, password)).build());
-        return new RetryingConnectionFactory(connectionFactory, ImmutableSet.of(new DefaultRetryStrategy()));
+        return new RetryingConnectionFactory(connectionFactory, RetryPolicy.ofDefaults());
     }
 
     @Override
@@ -148,11 +149,5 @@ public class TestingOracleServer
         catch (IOException ioe) {
             throw new UncheckedIOException(ioe);
         }
-    }
-
-    @ResourcePresence
-    public boolean isRunning()
-    {
-        return container.getContainerId() != null;
     }
 }
